--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,15 +10,18 @@
   <body>
     <h1>Apis and Microservices Projects - Timestamp Microservice</h1>
     <h2>Part 1 of Free Code Camp Backend Challenges</h2>
+    <h3>
+      You could see the details of requirements <a href="https://curse-arrow.glitch.me/" target="_blank">here</a>
+    </h3>
 
     <ul>
       <b>Example output:</b>
       <div>
-        { "unix": 1450137600, "natural": "December 15, 2015" }
+        { "unix": 1450137600, "utc": "2015-12-25" }
       </div>
     </ul>
     <ul>
-      <b>Example usage:</b>
+      <b>Test case 1: </b>
       <div>
         <a
           href="https://timestamp-microservice-demo.glitch.me/api/timestamp/2015-12-25"
@@ -28,22 +31,21 @@
       </div>
     </ul>
     <ul>
-      <b>Example usage:</b>
+      <b>Test case 2: </b>
       <div>
         <a
           href="https://timestamp-microservice-demo.glitch.me/api/timestamp/1450137600"
           target="_blank"
-          >https://timestamp-microservice-hchiam.glitch.me/1450137600</a
-        >
+          >https://timestamp-microservice-demo.glitch.me/api/timestamp/1450137600</a>
       </div>
     </ul>
     <ul>
-      <b>Example usage:</b>
+      <b>Test case 3:</b>
       <div>
         <a
-          href="https://timestamp-microservice-hchiam.glitch.me/invalid input"
+          href="https://timestamp-microservice-demo.glitch.me/api/timestamp/invalidInput"
           target="_blank"
-          >https://timestamp-microservice-hchiam.glitch.me/invalid input</a
+          >https://timestamp-microservice-demo.glitch.me/api/timestamp/invalidInput</a
         >
       </div>
     </ul>
